tests/ui/rust-2024/reverved-guarded-string-too-many-terminators-issue-140618.stderr
error: invalid string literal
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:19:5
   |
LL |     #"ok3!"#;
   |     ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     # "ok3!"#;
   |      +

error: invalid string literal
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:25:5
   |
LL |     #"ok4!"##;
   |     ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     # "ok4!"##;
   |      +

error: invalid string literal
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:31:5
   |
LL |     #"ok5!"###;
   |     ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     # "ok5!"###;
   |      +

error: too many `#` when terminating raw string
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:8:14
   |
LL |     r#"ok1!"##;
   |     ---------^ help: remove the extra `#`
   |     |
   |     this raw string started with 1 `#`

error: too many `#` when terminating raw string
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:14:14
   |
LL |     r#"ok2!"###;
   |     ---------^^ help: remove the extra `#`s
   |     |
   |     this raw string started with 1 `#`

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `#`
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:25:13
   |
LL |     #"ok4!"##;
   |             ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `#`
  --> $DIR/reverved-guarded-string-too-many-terminators-issue-140618.rs:31:13
   |
LL |     #"ok5!"###;
   |             ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to 7 previous errors

